text overlapping fixed

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -950,6 +950,7 @@
     margin-right: 5rem;
     margin-left: 5rem;
     font-size: 1.5rem;
+    padding-bottom: 2rem;
 }
 
 
